# forge-compiler

./: .dockerignore  .gitignore  Dockerfile  README.md  USER_MANUAL.md  pyproject.toml  run_tests.py
examples/: borrow_demo.forge  enums.forge  ffi_demo.forge  move_demo.forge  phase3_features.forge  simple.forge  stdlib_demo.forge  structs.ae
examples/modules_demo/: main.forge  math.forge
examples/stdlib/: io.forge  mem.forge
src/forgec/: ast_nodes.py  diagnostics.py  ir_gen.py  lexer.py  main.py  parser.py  pipeline.py  semantic.py
tests/: test_ir_gen.py  test_ir_gen_enums.py  test_ir_gen_match.py  test_ir_gen_structs.py  test_lexer.py  test_modules.py  test_parser.py  test_parser_enums.py  test_parser_match.py  test_parser_structs.py  test_semantic.py  test_semantic_enums.py  test_semantic_match.py  test_semantic_structs.py
